--- a/app/src/main/res/layout/activity_activity_detail.xml
+++ b/app/src/main/res/layout/activity_activity_detail.xml
@@ -101,8 +101,8 @@
                         android:layout_alignParentRight="true">
                         <ImageView
                             android:id="@+id/icon_zzim"
-                            android:layout_width="18dp"
-                            android:layout_height="16dp"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:background="@drawable/ico_titbarw_favorite"
                             android:layout_gravity="center"/>
                     </LinearLayout>
@@ -116,8 +116,8 @@
                         android:layout_toLeftOf="@id/btn_zzim">
                         <ImageView
                             android:id="@+id/icon_share"
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:background="@drawable/ico_titbarw_share"
                             android:layout_gravity="center"/>
                     </LinearLayout>
@@ -252,7 +252,8 @@
                     android:background="@drawable/img_bn_kakao"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="35dp"
-                    android:layout_marginRight="20dp" />
+                    android:layout_marginRight="20dp"
+                    style="?android:attr/borderlessButtonStyle"/>
 
             </LinearLayout>
 
@@ -297,6 +298,7 @@
             android:text="@string/detail_activity_select"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="15dp"/>
+            android:textSize="15dp"
+            style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
