--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -244,7 +244,8 @@
                     android:background="@drawable/img_bn_kakao"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="35dp"
-                    android:layout_marginRight="20dp" />
+                    android:layout_marginRight="20dp"
+                    style="?android:attr/borderlessButtonStyle"/>
 
             </LinearLayout>
 
@@ -288,6 +289,7 @@
             android:text="@string/detail_room_select"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="15dp"/>
+            android:textSize="15dp"
+            style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
