--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,8 @@
                     android:background="@drawable/purple_round"
                     android:layout_marginTop="20dp"
                     android:id="@+id/bt_login"
-                    android:text="@string/login_title"/>
-
+                    android:text="@string/login_title"
+                    style="?android:attr/borderlessButtonStyle"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -219,7 +219,8 @@
                     android:textSize="14dp"
                     android:textColor="@color/purple"
                     android:layout_marginBottom="30dp"
-                    android:background="@drawable/purple_and_white_round"/>
+                    android:background="@drawable/purple_and_white_round"
+                    style="?android:attr/borderlessButtonStyle"/>
 
             </RelativeLayout>
         </RelativeLayout>
