--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -418,5 +418,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="23dp"/>
+        android:layout_marginBottom="23dp"
+        style="?android:attr/borderlessButtonStyle"/>
 </RelativeLayout>
