--- a/app/src/main/res/layout/dialog_billing_alert.xml
+++ b/app/src/main/res/layout/dialog_billing_alert.xml
@@ -69,7 +69,8 @@
                 android:textColor="#ffffff"
                 android:textSize="15dp"
                 android:background="@drawable/style_dialog_confirm_button_left"
-                android:padding="17dp"/>
+                android:padding="17dp"
+                style="?android:attr/borderlessButtonStyle"/>
 
             <Button
                 android:id="@+id/ok"
@@ -82,7 +83,8 @@
                 android:textSize="15dp"
                 android:background="@drawable/style_dialog_confirm_button_right"
                 android:textStyle="bold"
-                android:padding="17dp"/>
+                android:padding="17dp"
+                style="?android:attr/borderlessButtonStyle"/>
         </LinearLayout>
     </LinearLayout>
 
