--- a/app/src/main/res/layout/fragment_h_result.xml
+++ b/app/src/main/res/layout/fragment_h_result.xml
@@ -45,6 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        style="?android:attr/borderlessButtonStyle"/>
 
 </RelativeLayout>
