--- a/app/src/main/res/layout/layout_detail_map.xml
+++ b/app/src/main/res/layout/layout_detail_map.xml
@@ -6,33 +6,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textSize="14dp"
-        android:textColor="@color/blacktxt"
-        android:text="@string/detail_address_title"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textSize="12dp"
-        android:layout_marginTop="3dp"
-        android:textColor="@color/termtext"
-        tools:text="서울특별시 용산구 한강로3가 40-969"/>
+        <TextView
+            android:id="@+id/addr_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:textSize="14dp"
+            android:textColor="@color/blacktxt"
+            android:text="@string/detail_address_title"/>
 
-    <ImageView
-        android:id="@+id/map_img"
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_below="@+id/addr_title"
+            android:textSize="12dp"
+            android:layout_marginTop="3dp"
+            android:textColor="@color/termtext"
+            tools:text="서울특별시 용산구 한강로3가 40-969"/>
+
+        <ImageView
+            android:id="@+id/company_call"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/btn_hotel_call"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="3dp"
+            android:visibility="gone"
+            android:scaleType="fitXY"/>
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:layout_marginTop="12dp"
-        android:src="@drawable/placeholder"
-        android:scaleType="centerCrop" />
+        android:layout_marginTop="12dp">
+
+        <ImageView
+            android:id="@+id/map_img"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:src="@drawable/placeholder"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/btn_kimkisa"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:background="@drawable/ico_titbar_knavi_l"
+            android:scaleType="fitXY"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:visibility="gone"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +118,7 @@
                 android:background="@drawable/ico_location"/>
 
             <TextView
+                android:id="@+id/btn_near"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13dp"
