--- a/app/src/main/res/layout/layout_ha_footer.xml
+++ b/app/src/main/res/layout/layout_ha_footer.xml
@@ -10,5 +10,6 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@drawable/btn_screenup"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        style="?android:attr/borderlessButtonStyle"/>
 </LinearLayout>
