--- a/app/src/main/res/layout/layout_reservation_hotel.xml
+++ b/app/src/main/res/layout/layout_reservation_hotel.xml
@@ -128,7 +128,7 @@
 
         <TextView
             android:id="@+id/tv_center"
-            android:layout_width="7dp"
+            android:layout_width="wrap_content"
             android:layout_height="19dp"
             android:text="-"
             android:layout_centerInParent="true"
