--- a/app/src/main/res/layout/activity_reservation_activity_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_activity_detail.xml
@@ -134,122 +134,49 @@
                     android:background="@drawable/bg_round_status_book"/>
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/rl_date"
+            <LinearLayout
+                android:id="@+id/user_set_info"
                 android:layout_width="match_parent"
-                android:layout_height="81dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_below="@+id/img_info"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_below="@+id/img_info">
+
+                <Button
+                    android:id="@+id/btn_review"
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:background="@drawable/hotdeal_round"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="25dp"
+                    android:textColor="@color/redtext"
+                    android:text="리뷰 작성하기"
+                    android:textSize="14dp"
+                    android:visibility="gone"
+                    style="?android:attr/borderlessButtonStyle"/>
 
                 <TextView
-                    android:id="@+id/tv_center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="19dp"
-                    android:text="-"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/blacktxt"
-                    android:layout_gravity="center"/>
-
-                <LinearLayout
+                    android:id="@+id/not_user_reserid"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="52dp"
+                    android:background="@color/special"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:textColor="@color/purple"
+                    android:layout_marginBottom="25dp"
                     android:gravity="center"
-                    android:layout_toLeftOf="@+id/tv_center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/detail_checkin_title"
-                        android:textColor="@color/star_txt"
-                        android:textSize="13dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_checkin_day"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:text="2018년 8월 31일(금)"
-                        android:textColor="@color/blacktxt"
-                        android:textSize="15dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_checkin_time"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:text="14:00"
-                        android:textColor="@color/blacktxt"
-                        android:textSize="14dp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_toRightOf="@+id/tv_center"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="16dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/detail_checkout_title"
-                        android:textColor="@color/star_txt"
-                        android:textSize="13dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_checkout_day"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:text="2018년 9월 01일(토)"
-                        android:textColor="@color/blacktxt"
-                        android:textSize="15dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_checkout_time"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:text="12:00"
-                        android:textColor="@color/blacktxt"
-                        android:textSize="14dp"/>
-                </LinearLayout>
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/btn_review"
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_below="@+id/rl_date"
-                android:background="@drawable/hotdeal_round"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textColor="@color/redtext"
-                android:text="리뷰 작성하기"
-                android:textSize="14dp"
-                style="?android:attr/borderlessButtonStyle"/>
-            
-            <TextView
-                android:id="@+id/not_user_reserid"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_below="@+id/rl_date"
-                android:background="@color/special"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textColor="@color/purple"
-                android:text="예약번호"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:visibility="gone"/>
+                    android:textSize="15dp"
+                    android:visibility="gone"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_gap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_below="@+id/btn_review"
-                android:layout_marginTop="25dp">
+                android:layout_below="@+id/user_set_info">
 
                 <View
                     android:layout_width="match_parent"
@@ -345,6 +272,40 @@
                     android:layout_marginTop="18dp"
                     android:background="@color/bg_background" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_gap"
+                android:orientation="vertical"
+                android:background="@color/white">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/footerview">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="37dp"
+                        android:text="티켓 정보"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/purple" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ticket_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:visibility="gone">
+                </LinearLayout>
+            </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -385,64 +346,6 @@
                         android:textSize="14dp"
                         android:textColor="@color/blacktxt"
                         tools:text="358,000원"
-                        android:gravity="right"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/ll_private"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="17dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="프라이빗딜 특별할인"
-                        android:textSize="14dp"
-                        android:textColor="@color/blacktxt"
-                        android:gravity="left" />
-
-                    <TextView
-                        android:id="@+id/tv_private_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="14dp"
-                        android:textColor="@color/blacktxt"
-                        tools:text="김나우"
-                        android:gravity="right"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/ll_reservation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="17dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="적립금 사용액"
-                        android:textSize="14dp"
-                        android:textColor="@color/blacktxt"
-                        android:gravity="left" />
-
-                    <TextView
-                        android:id="@+id/tv_reserve_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="14dp"
-                        android:textColor="@color/blacktxt"
-                        tools:text="김나우"
                         android:gravity="right"/>
                 </LinearLayout>
 
@@ -512,55 +415,6 @@
                         tools:text="329,000원"
                         android:gravity="right"/>
                 </LinearLayout>
-
-
-                <TableLayout
-                    android:id="@+id/sub_products"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:visibility="gone">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#f7f7fa"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp">
-
-                        <TextView
-                            android:id="@+id/date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_weight="1"
-                            android:textColor="@color/graytxt"
-                            android:text="날짜"
-                            style="@android:style/TextAppearance.Small"/>
-
-                        <TextView
-                            android:id="@+id/price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_weight="1"
-                            android:text="판매가"
-                            android:textColor="@color/graytxt"
-                            style="@android:style/TextAppearance.Small"/>
-
-                        <TextView
-                            android:id="@+id/breakfast"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_weight="1"
-                            android:text="조식"
-                            android:textColor="@color/graytxt"
-                            style="@android:style/TextAppearance.Small"/>
-                    </TableRow>
-                </TableLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -851,76 +705,6 @@
                         android:gravity="right"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/ll_save_point"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="18dp"
-                        android:background="@color/bg_background" />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/footerview">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="37dp"
-                            android:text="@string/reservation_money"
-                            android:textSize="14dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:gravity="center_vertical"
-                            android:textColor="@color/purple" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="22dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="적립금"
-                            android:textSize="14dp"
-                            android:textColor="@color/blacktxt"
-                            android:gravity="left" />
-
-                        <TextView
-                            android:id="@+id/tv_save_point"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="14dp"
-                            android:textStyle="bold"
-                            android:textColor="@color/blacktxt"
-                            tools:text="김나우"
-                            android:gravity="right"/>
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tv_save_point_info"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="12dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/graytxt"
-                        android:text="@string/save_point_info"
-                        android:gravity="right"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="8dp"/>
-                </LinearLayout>
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -934,8 +718,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="37dp"
-                        android:text="@string/info_title"
-                        android:textSize="14dp"
+                        android:text="상품 정보"
+                       android:textSize="14dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:gravity="center_vertical"
@@ -948,6 +732,7 @@
                     android:id="@+id/info_view"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="22dp"
                     tools:ignore="WebViewLayout"></WebView>
 
                 <View
