--- a/app/src/main/res/layout/activity_reservation_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_hotel_detail.xml
@@ -216,40 +216,50 @@
                 </LinearLayout>
             </RelativeLayout>
 
-            <Button
-                android:id="@+id/btn_review"
+            <LinearLayout
+                android:id="@+id/user_set_info"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:layout_below="@+id/rl_date"
-                android:background="@drawable/hotdeal_round"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textColor="@color/redtext"
-                android:text="리뷰 작성하기"
-                android:textSize="14dp"
-                style="?android:attr/borderlessButtonStyle"/>
-            
-            <TextView
-                android:id="@+id/not_user_reserid"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_below="@+id/rl_date"
-                android:background="@color/special"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textColor="@color/purple"
-                android:text="예약번호"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:visibility="gone"/>
+                android:visibility="visible">
+
+                <Button
+                    android:id="@+id/btn_review"
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:background="@drawable/hotdeal_round"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:textColor="@color/redtext"
+                    android:text="리뷰 작성하기"
+                    android:textSize="14dp"
+                    android:visibility="gone"
+                    android:layout_marginBottom="25dp"
+                    style="?android:attr/borderlessButtonStyle"/>
+
+                <TextView
+                    android:id="@+id/not_user_reserid"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:background="@color/special"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:textColor="@color/purple"
+                    android:gravity="center"
+                    android:textSize="15dp"
+                    android:layout_marginBottom="25dp"
+                    android:visibility="gone"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_gap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_below="@+id/btn_review"
-                android:layout_marginTop="25dp">
+                android:layout_below="@+id/user_set_info">
 
                 <View
                     android:layout_width="match_parent"
@@ -948,6 +958,7 @@
                     android:id="@+id/info_view"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="22dp"
                     tools:ignore="WebViewLayout"></WebView>
 
                 <View
